--- a/orbit-launcher-elite/orbit-elite/index.html
+++ b/orbit-launcher-elite/orbit-elite/index.html
@@ -362,28 +362,28 @@
             <br>
             <div class="options">
               <div id="item">
-                <label><input name="item" alt="https://facebook.com" type="radio" value="facebook-f" id="facebook"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-facebook-f"></i></a></label>
-                <label><input name="item" alt="https://github.com" type="radio" value="github-alt" id="github"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-github-alt"></i></a></label>
-                <label><input name="item" alt="https://dropbox.com" type="radio" value="dropbox" id="dropbox"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-dropbox"></i></a></label>
-                <label><input name="item" alt="https://deviantart.com" type="radio" value="deviantart" id="deviantart"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-deviantart"></i></a></label>
-                <label><input name="item" alt="http://discordapp.com/channels/@me" type="radio" value="discord" id="discord"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-discord"></i></a></label>
-                <label><input name="item" alt="https://google.com" type="radio" value="google" id="google"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google"></i></a></label>
-                <label><input name="item" alt="https://drive.google.com" type="radio" value="google-drive" id="drive"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google-drive"></i></a></label>
-                <label><input name="item" alt="https://play.google.com" type="radio" value="google-play" id="play"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google-play"></i></a></label>
-                <label><input name="item" alt="https://linkedin.com" type="radio" value="linkedin" id="linked"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-linkedin"></i></a></label>
-                <label><input name="item" alt="https://pinterest.com" type="radio" value="pinterest-p" id="pin"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-pinterest-p"></i></a></label>
-                <label><input name="item" alt="https://reddit.com" type="radio" value="reddit-alien" id="reddit"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-reddit-alien"></i></a></label>
-                <label><input name="item" alt="https://snapchat.com" type="radio" value="snapchat-ghost" id="snap"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-snapchat-ghost"></i></a></label>
-                <label><input name="item" alt="https://twitter.com" type="radio" value="twitter" id="twitter"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-twitter"></i></a></label>
-                <label><input name="item" alt="https://youtube.com" type="radio" value="youtube" id="youtube"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-youtube"></i></a></label>
-                <label><input name="item" alt="https://mail.google.com" type="radio" value="mail" id="mail"><a class="accentCol backgroundCol sdbtn"><i class="fas fa-envelope"></i></a></label>
-                <label><input name="item" alt="https://instagram.com" type="radio" value="instagram" id="insta"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-instagram"></i></a></label>
-                <label><input name="item" alt="https://twitch.tv" type="radio" value="twitch" id="twitch"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-twitch"></i></a></label>
-                <label><input name="item" alt="https://amazon.com" type="radio" value="amazon" id="amazon"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-amazon"></i></a></label>
-                <label><input name="item" alt="https://ebay.com" type="radio" value="ebay" id="ebay"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-ebay"></i></a></label>
-                <label><input name="item" alt="https://etsy.com" type="radio" value="etsy" id="etsy"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-etsy"></i></a></label>
-                <label><input name="item" alt="https://patreon.com" type="radio" value="patreon" id="patreon"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-patreon"></i></a></label>
-                <label><input name="item" alt="https://my.nintendo.com/" type="radio" value="nintendo-switch" id="nintendo"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-nintendo-switch"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://facebook.com" type="radio" value="facebook-f" id="facebook"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-facebook-f"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://github.com" type="radio" value="github-alt" id="github"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-github-alt"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://dropbox.com" type="radio" value="dropbox" id="dropbox"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-dropbox"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://deviantart.com" type="radio" value="deviantart" id="deviantart"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-deviantart"></i></a></label>
+                <label><input class="optionItems" name="item" alt="http://discordapp.com/channels/@me" type="radio" value="discord" id="discord"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-discord"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://google.com" type="radio" value="google" id="google"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://drive.google.com" type="radio" value="google-drive" id="drive"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google-drive"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://play.google.com" type="radio" value="google-play" id="play"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-google-play"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://linkedin.com" type="radio" value="linkedin" id="linked"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-linkedin"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://pinterest.com" type="radio" value="pinterest-p" id="pin"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-pinterest-p"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://reddit.com" type="radio" value="reddit-alien" id="reddit"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-reddit-alien"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://snapchat.com" type="radio" value="snapchat-ghost" id="snap"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-snapchat-ghost"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://twitter.com" type="radio" value="twitter" id="twitter"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-twitter"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://youtube.com" type="radio" value="youtube" id="youtube"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-youtube"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://mail.google.com" type="radio" value="mail" id="mail"><a class="accentCol backgroundCol sdbtn"><i class="fas fa-envelope"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://instagram.com" type="radio" value="instagram" id="insta"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-instagram"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://twitch.tv" type="radio" value="twitch" id="twitch"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-twitch"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://amazon.com" type="radio" value="amazon" id="amazon"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-amazon"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://ebay.com" type="radio" value="ebay" id="ebay"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-ebay"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://etsy.com" type="radio" value="etsy" id="etsy"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-etsy"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://patreon.com" type="radio" value="patreon" id="patreon"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-patreon"></i></a></label>
+                <label><input class="optionItems" name="item" alt="https://my.nintendo.com/" type="radio" value="nintendo-switch" id="nintendo"><a class="accentCol backgroundCol sdbtn"><i class="fab fa-nintendo-switch"></i></a></label>
               </div>
               <br />
               <br />
